--- a/package.json
+++ b/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.106",
+    "@mui/material": "^5.10.12",
+    "@mui/x-data-grid": "^5.17.9",
+    "@mui/x-date-pickers-pro": "^5.0.9",
+    "@react-pdf-viewer/core": "^3.7.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
+    "js-file-download": "^0.4.12",
+    "pdfmake": "^0.2.6",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
+    "react-hook-form": "^7.42.1",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.0",
+    "react-toastify": "^9.1.1",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.6.9",
+    "uuid": "^9.0.0",
+    "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +58,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
